# python_pgp_decryptor_widget

./: Makefile  README.md  armour.py  dearmor.py  pyproject.toml  requirements-ci.txt  requirements.txt  test_dearmor.py  test_pgp_decryptor.py
.github/workflows/: ci-check.yaml
