[project]
name = "python-dearmor-widget"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-gnupg>=0.5.4",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.1.0",
    "coverage>=7.9.2",
    "flake8>=7.3.0",
    "flake8-bugbear>=24.12.12",
    "jake>=3.0.14",
    "pytest>=8.4.1",
    "python-gnupg>=0.5.4",
    "ruff>=0.12.3",
]
